fix(be): Faza B + C + E — sva P1 BE + svih 10 interbank.* + 3 CardServiceImpl test isolation + 8 NEW failures
Audit runda 25-26.05.2026 popodne (BE Faza B/C/E + Faza A regression fix-up).
Pun katalog: .claude/CODE_QUALITY.md.

P1 BE AUTH (BE-AUTH-05/06/07 sa 04/08 ranije resenim):
- BE-AUTH-05: EmployeeAuthServiceImpl.getTokenStatus @Transactional(readOnly=true)
  — lazy token.getEmployee() asocijacija sad ucitavana unutar Tx scope-a
- BE-AUTH-06: ClientServiceImpl salt inconsistency — Client.password deprecated
  (single source: User.password), salt path uklonjen
- BE-AUTH-07: JwtBlacklistService @ConditionalOnProperty(jwt.blacklist.backend)
  — priprema za Redis backend swap-in bez breaking change-a
- + tests prilagodjeni single-hash refactor-u (FIX-up: ClientServiceImpl.encode 2→1)

P1 BE PAYMENT/LOAN/SAVINGS/EXCHANGE (BE-PAY-02/03/04/05/06/07):
- BE-PAY-02: LoanInstallmentScheduler refactor — InstallmentProcessor bean
  sa @Transactional(REQUIRES_NEW) per installment, scheduler bez outer Tx.
  Partial failure izolovan.
- BE-PAY-03: VariableRateScheduler isti pattern — VariableRateProcessor bean
- BE-PAY-04: SavingsInterestRateService @Version + retry on
  ObjectOptimisticLockingFailure / DataIntegrityViolation (3× exponential)
- BE-PAY-05: UpsertSavingsRateDto.termMonths @AssertTrue whitelist {3,6,12,24,36}
- BE-PAY-06: Loan apply + early-repayment sad OTP-gated (LoanRequestDto.otpCode
  + X-OTP-Code header, paritet sa payments/savings flow-om)
- BE-PAY-07: ExchangeService AtomicReference<RatesSnapshot> — race-free
  atomic snapshot pattern, no torn reads

P1 BE INTERBANK + ORDER (BE-INT-04/05/06/07 + BE-ORD-03/04/05/06/07/08):
- BE-INT-04: InterbankPaymentAsyncService early-return on terminal-state
  payment (no spurious COMPLETED → REJECTED flips)
- BE-INT-05: fetchRemotePublicStocks @Transactional removed — HTTP I/O ne
  drzi Hikari connection
- BE-INT-06: TransactionExecutorService.commitLocal mid-loop compensation —
  reverse stock commits on exception (mir